include/El/lapack_like/factor.py


lib.ElRQ_s.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElRQ_s.restype = c_uint
lib.ElRQ_d.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElRQ_d.restype = c_uint
lib.ElRQ_c.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElRQ_c.restype = c_uint
lib.ElRQ_z.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElRQ_z.restype = c_uint
lib.ElRQDist_s.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElRQDist_s.restype = c_uint
lib.ElRQDist_d.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElRQDist_d.restype = c_uint
lib.ElRQDist_c.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElRQDist_c.restype = c_uint
lib.ElRQDist_z.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElRQDist_z.restype = c_uint
#lib.ElRQExplicit_s.argtypes = [c_void_p,c_void_p]
#lib.ElRQExplicit_s.restype = c_uint
#lib.ElRQExplicit_d.argtypes = [c_void_p,c_void_p]
#lib.ElRQExplicit_d.restype = c_uint
#lib.ElRQExplicit_c.argtypes = [c_void_p,c_void_p]
#lib.ElRQExplicit_c.restype = c_uint
#lib.ElRQExplicit_z.argtypes = [c_void_p,c_void_p]
#lib.ElRQExplicit_z.restype = c_uint
#lib.ElRQExplicitDist_s.argtypes = [c_void_p,c_void_p]
#lib.ElRQExplicitDist_s.restype = c_uint
#lib.ElRQExplicitDist_d.argtypes = [c_void_p,c_void_p]
#lib.ElRQExplicitDist_d.restype = c_uint
#lib.ElRQExplicitDist_c.argtypes = [c_void_p,c_void_p]
#lib.ElRQExplicitDist_c.restype = c_uint
#lib.ElRQExplicitDist_z.argtypes = [c_void_p,c_void_p]
#lib.ElRQExplicitDist_z.restype = c_uint
#lib.ElRQExplicitUnitary_s.argtypes = [c_void_p]
#lib.ElRQExplicitUnitary_s.restype = c_uint
#lib.ElRQExplicitUnitary_d.argtypes = [c_void_p]
#lib.ElRQExplicitUnitary_d.restype = c_uint
#lib.ElRQExplicitUnitary_c.argtypes = [c_void_p]
#lib.ElRQExplicitUnitary_c.restype = c_uint
#lib.ElRQExplicitUnitary_z.argtypes = [c_void_p]
#lib.ElRQExplicitUnitary_z.restype = c_uint
#lib.ElRQExplicitUnitaryDist_s.argtypes = [c_void_p]
#lib.ElRQExplicitUnitaryDist_s.restype = c_uint
#lib.ElRQExplicitUnitaryDist_d.argtypes = [c_void_p]
#lib.ElRQExplicitUnitaryDist_d.restype = c_uint
#lib.ElRQExplicitUnitaryDist_c.argtypes = [c_void_p]
#lib.ElRQExplicitUnitaryDist_c.restype = c_uint
#lib.ElRQExplicitUnitaryDist_z.argtypes = [c_void_p]
#lib.ElRQExplicitUnitaryDist_z.restype = c_uint
lib.ElRQExplicitTriang_s.argtypes = [c_void_p]
lib.ElRQExplicitTriang_s.restype = c_uint
lib.ElRQExplicitTriang_d.argtypes = [c_void_p]
lib.ElRQExplicitTriang_d.restype = c_uint
lib.ElRQExplicitTriang_c.argtypes = [c_void_p]
lib.ElRQExplicitTriang_c.restype = c_uint
lib.ElRQExplicitTriang_z.argtypes = [c_void_p]
lib.ElRQExplicitTriang_z.restype = c_uint
lib.ElRQExplicitTriangDist_s.argtypes = [c_void_p]
lib.ElRQExplicitTriangDist_s.restype = c_uint
lib.ElRQExplicitTriangDist_d.argtypes = [c_void_p]
lib.ElRQExplicitTriangDist_d.restype = c_uint
lib.ElRQExplicitTriangDist_c.argtypes = [c_void_p]
lib.ElRQExplicitTriangDist_c.restype = c_uint
lib.ElRQExplicitTriangDist_z.argtypes = [c_void_p]
lib.ElRQExplicitTriangDist_z.restype = c_uint
def RQ(A,factType=RQ_IMPLICIT):
  if type(A) is Matrix:
    if factType == RQ_IMPLICIT:
      t = Matrix(A.tag)
      d = Matrix(Base(A.tag))
      if   A.tag == sTag: lib.ElRQ_s(A.obj,t.obj,d.obj)
      elif A.tag == dTag: lib.ElRQ_d(A.obj,t.obj,d.obj)
      elif A.tag == cTag: lib.ElRQ_c(A.obj,t.obj,d.obj)
      elif A.tag == zTag: lib.ElRQ_z(A.obj,t.obj,d.obj)
      else: raise Exception('Unsupported datatype')
      return t, d
    elif factType == RQ_EXPLICIT:
      raise Exception('Explicit RQ factorization not yet supported')
      #R = Matrix(A.tag)
      #if   A.tag == sTag: lib.ElRQExplicit_s(R.obj,A.obj)
      #elif A.tag == dTag: lib.ElRQExplicit_d(R.obj,A.obj)
      #elif A.tag == cTag: lib.ElRQExplicit_c(R.obj,A.obj)
      #elif A.tag == zTag: lib.ElRQExplicit_z(R.obj,A.obj)
      #else: raise Exception('Unsupported datatype')
      #return R
    elif factType == RQ_EXPLICIT_UNITARY:
      raise Exception('Explicit unitary factor from RQ not yet supported')
      #if   A.tag == sTag: lib.ElRQExplicitUnitary_s(A.obj)
      #elif A.tag == dTag: lib.ElRQExplicitUnitary_d(A.obj)
      #elif A.tag == cTag: lib.ElRQExplicitUnitary_c(A.obj)
      #elif A.tag == zTag: lib.ElRQExplicitUnitary_z(A.obj)
      #else: raise Exception('Unsupported datatype')
    elif factType == RQ_EXPLICIT_TRIANG:
      if   A.tag == sTag: lib.ElRQExplicitTriang_s(A.obj)
      elif A.tag == dTag: lib.ElRQExplicitTriang_d(A.obj)
      elif A.tag == cTag: lib.ElRQExplicitTriang_c(A.obj)
      elif A.tag == zTag: lib.ElRQExplicitTriang_z(A.obj)
      else: raise Exception('Unsupported datatype')
    else: raise Exception('Unsupported RQ factorization type')
  elif type(A) is DistMatrix:
    if factType == RQ_IMPLICIT:
      t = DistMatrix(A.tag,MC,STAR,A.Grid())
      d = DistMatrix(Base(A.tag),MC,STAR,A.Grid())
      if   A.tag == sTag: lib.ElRQDist_s(A.obj,t.obj,d.obj)
      elif A.tag == dTag: lib.ElRQDist_d(A.obj,t.obj,d.obj)
      elif A.tag == cTag: lib.ElRQDist_c(A.obj,t.obj,d.obj)
      elif A.tag == zTag: lib.ElRQDist_z(A.obj,t.obj,d.obj)
      else: raise Exception('Unsupported datatype')
      return t, d
    elif factType == RQ_EXPLICIT:
      raise Exception('Explicit RQ factorization not yet supported')
      #R = DistMatrix(A.tag,MC,MR,A.Grid())
      #if   A.tag == sTag: lib.ElRQExplicitDist_s(R.obj,A.obj)
      #elif A.tag == dTag: lib.ElRQExplicitDist_d(R.obj,A.obj)
      #elif A.tag == cTag: lib.ElRQExplicitDist_c(R.obj,A.obj)
      #elif A.tag == zTag: lib.ElRQExplicitDist_z(R.obj,A.obj)
      #else: raise Exception('Unsupported datatype')
      #return R
    elif factType == RQ_EXPLICIT_UNITARY:
      raise Exception('Explicit unitary factor from RQ not yet supported')
      #if   A.tag == sTag: lib.ElRQExplicitUnitaryDist_s(A.obj)
      #elif A.tag == dTag: lib.ElRQExplicitUnitaryDist_d(A.obj)
      #elif A.tag == cTag: lib.ElRQExplicitUnitaryDist_c(A.obj)
      #elif A.tag == zTag: lib.ElRQExplicitUnitaryDist_z(A.obj)
      #else: raise Exception('Unsupported datatype')
    elif factType == RQ_EXPLICIT_TRIANG:
      if   A.tag == sTag: lib.ElRQExplicitTriangDist_s(A.obj)
      elif A.tag == dTag: lib.ElRQExplicitTriangDist_d(A.obj)
      elif A.tag == cTag: lib.ElRQExplicitTriangDist_c(A.obj)
      elif A.tag == zTag: lib.ElRQExplicitTriangDist_z(A.obj)
      else: raise Exception('Unsupported datatype')
    else: raise Exception('Unsupported RQ factorization type')
  else: raise Exception('Unsupported datatype')

lib.ElApplyQAfterRQ_s.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterRQ_s.restype = c_uint
lib.ElApplyQAfterRQ_d.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterRQ_d.restype = c_uint
lib.ElApplyQAfterRQ_c.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterRQ_c.restype = c_uint
lib.ElApplyQAfterRQ_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterRQ_z.restype = c_uint
lib.ElApplyQAfterRQDist_s.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterRQDist_s.restype = c_uint
lib.ElApplyQAfterRQDist_d.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterRQDist_d.restype = c_uint
lib.ElApplyQAfterRQDist_c.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterRQDist_c.restype = c_uint
lib.ElApplyQAfterRQDist_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterRQDist_z.restype = c_uint
def ApplyQAfterRQ(side,orient,A,t,d,B):
  if type(A) is not type(t) or type(t) is not type(d) or type(d) is not type(B):
    raise Exception('Matrix types of {A,t,d,B} must match')
  if A.tag != t.tag or t.tag != B.tag or d.tag != Base(A.tag):
    raise Exception('Datatypes of {A,t,B} must match and d must have base type')
  if type(A) is Matrix:
    if   A.tag == sTag: 
      lib.ElApplyQAfterRQ_s(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == dTag:
      lib.ElApplyQAfterRQ_d(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == cTag:
      lib.ElApplyQAfterRQ_c(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == zTag:
      lib.ElApplyQAfterRQ_z(side,orient,A.obj,t.obj,d.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: 
      lib.ElApplyQAfterRQDist_s(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == dTag:
      lib.ElApplyQAfterRQDist_d(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == cTag:
      lib.ElApplyQAfterRQDist_c(side,orient,A.obj,t.obj,d.obj,B.obj)
    elif A.tag == zTag:
      lib.ElApplyQAfterRQDist_z(side,orient,A.obj,t.obj,d.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

lib.ElSolveAfterRQ_s.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterRQ_s.restype = c_uint
lib.ElSolveAfterRQ_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterRQ_d.restype = c_uint
lib.ElSolveAfterRQ_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterRQ_c.restype = c_uint
lib.ElSolveAfterRQ_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterRQ_z.restype = c_uint
lib.ElSolveAfterRQDist_s.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterRQDist_s.restype = c_uint
lib.ElSolveAfterRQDist_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterRQDist_d.restype = c_uint
lib.ElSolveAfterRQDist_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterRQDist_c.restype = c_uint
lib.ElSolveAfterRQDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElSolveAfterRQDist_z.restype = c_uint
def SolveAfterRQ(orient,A,t,d,B):
  if type(A) is Matrix:
    X = Matrix(A.tag)
    if   A.tag == sTag: 
      lib.ElSolveAfterRQ_s(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == dTag:
      lib.ElSolveAfterRQ_d(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == cTag:
      lib.ElSolveAfterRQ_c(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == zTag:
      lib.ElSolveAfterRQ_z(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    else: raise Exception('Unsupported datatype')
    return X
  elif type(A) is DistMatrix:
    X = DistMatrix(A.tag,MC,MR,A.Grid())
    if   A.tag == sTag: 
      lib.ElSolveAfterRQDist_s(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == dTag:
      lib.ElSolveAfterRQDist_d(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == cTag:
      lib.ElSolveAfterRQDist_c(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    elif A.tag == zTag:
      lib.ElSolveAfterRQDist_z(orient,A.obj,t.obj,d.obj,B.obj,X.obj)
    else: raise Exception('Unsupported datatype')
    return X
  else: raise Exception('Unsupported matrix type')

# Generalized QR factorization
# ============================
(GQR_IMPLICIT,GQR_EXPLICIT,GQR_EXPLICIT_TRIANG,GQR_EXPLICIT_UNITARY)=(0,1,2,3)

lib.ElGQR_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGQR_s.restype = c_uint
lib.ElGQR_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGQR_d.restype = c_uint
lib.ElGQR_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGQR_c.restype = c_uint
lib.ElGQR_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGQR_z.restype = c_uint
lib.ElGQRDist_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGQRDist_s.restype = c_uint
lib.ElGQRDist_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGQRDist_d.restype = c_uint
lib.ElGQRDist_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGQRDist_c.restype = c_uint
lib.ElGQRDist_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGQRDist_z.restype = c_uint
